tests/ui/typeck/unused-type-parameter-span-issue-30236.rs
type Foo<
    Unused //~ ERROR type parameter `Unused` is never used
    > = u8;

fn main() {

}

// https://github.com/rust-lang/rust/issues/30236
